--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/geolocation": "^4.15.0",
     "@ionic-native/splash-screen": "^4.12.2",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/storage": "2.1.3",
     "@types/google-maps": "^3.2.0",
     "angularfire2": "^5.0.0-rc.12",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "firebase": "^5.4.2",
     "ionic-angular": "3.9.2",
@@ -42,7 +44,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-splashscreen": {}
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-geolocation": {}
     }
   }
 }
